:rotating_light: back out suggestion for instance where we need to modify the list after terminating the Stream